--- a/packaging/rpm/docker/rpm-repo-builder/Dockerfile
+++ b/packaging/rpm/docker/rpm-repo-builder/Dockerfile
@@ -10,5 +10,5 @@ RUN dnf install -y \
 COPY packaging/rpm/rpm-sign.sh /usr/local/bin/rpm-sign
 RUN chmod +x /usr/local/bin/rpm-sign
 
-COPY packaging/rpm/rpm-sign.sh /usr/local/bin/create-rpm-repo
+COPY packaging/rpm/create-rpm-repo.sh /usr/local/bin/create-rpm-repo
 RUN chmod +x /usr/local/bin/create-rpm-repo
