--- a/.github/workflows/release/publish-maven-packages.yml
+++ b/.github/workflows/release/publish-maven-packages.yml
@@ -43,13 +43,14 @@ jobs:
 
           case "$CHANNEL" in
             "3.8")
-              SOURCE_URL="https://api.nuget.org/v3/index.json"
-              NUGET_API_KEY="${{ secrets.NUGET_RELEASE_API_KEY }}"
+              SOURCE_URL="https://central.sonatype.com"
+              MAVEN_USERNAME="${{ secrets.MAVEN_CENTRAL_USERNAME }}"
+              MAVEN_PASSWORD="${{ secrets.MAVEN_CENTRAL_API_KEY }}"
               ;;
             "nightly")
               SOURCE_URL="https://download.zeroc.com/nexus/repository/maven-nightly/"
               MAVEN_USERNAME="nightly"
-              MAVEN_PASSWORD="${{ secrets.NUGET_NIGHTLY_API_KEY }}"
+              MAVEN_PASSWORD="${{ secrets.NUGET_NIGHTLY_PASSWORD }}"
               ;;
             *)
               echo "Unsupported channel: $CHANNEL"
@@ -62,5 +63,6 @@ jobs:
           cp -pf staging/java-packages/java/lib/*.pom lib
           cp -pf staging/java-packages/java/tools/slice-tools/build/libs/*.jar tools/slice-tools/build/libs/
 
-          ./gradlew publish -PiceVersion=${{ inputs.ice_version }}
+          ice_version=$(basename "$(ls ib/ice-*-sources.jar)" | sed -E 's/^ice-(.+)-sources\.jar$/\1/')
+          ./gradlew publish -PiceVersion="${ice_version}"
         working-directory: ice/java
