Create docker manifest for deb builder images

--- a/.github/workflows/build-container-images.yml
+++ b/.github/workflows/build-container-images.yml
@@ -115,6 +115,8 @@ jobs:
           - ice-rpm-builder-el9
           - ice-rpm-builder-el10
           - ice-rpm-builder-amzn2023
+          - ice-deb-builder-debian12
+          - ice-deb-builder-ubuntu24.04
 
     steps:
       - name: Set up Docker Buildx
