--- a/.github/workflows/publish-gem-packages.yml
+++ b/.github/workflows/publish-gem-packages.yml
@@ -42,9 +42,9 @@ jobs:
             --fail \
             --show-error \
             https://download.zeroc.com/nexus/repository/rubygems-nightly/ || { echo "Gem upload failed"; exit 1; }
-        if: inputs.channel == 'nightly'
+        if: ${{ inputs.channel == 'nightly' }}
 
       - name: Publish Release GEM Packages
         run: |
           GEM_HOST_API_KEY=${{ secrets.RUBYGEMS_API_KEY }} gem push staging/gem-packages/zeroc-ice-*.gem
-        if: inputs.channel != 'nightly'
+        if: ${{ inputs.channel != 'nightly' }}
