Fix publish workflow failures

--- a/.github/workflows/build-brew-packages.yml
+++ b/.github/workflows/build-brew-packages.yml
@@ -48,4 +48,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: homebrew-bottle
-          path: ./*.bottle.tar.gz
+          path: ./*.tar.gz
