--- a/.github/workflows/publish-nuget-packages.yml
+++ b/.github/workflows/publish-nuget-packages.yml
@@ -38,11 +38,11 @@ jobs:
           case "$CHANNEL" in
             "3.8")
               SOURCE_URL="https://api.nuget.org/v3/index.json"
-              NUGET_API_KEY="${{ secrets.NUGET_RELEASE_API_KEY }}"
+              NUGET_API_KEY="${RELEASE_NUGET_API_KEY}"
               ;;
             "nightly")
               SOURCE_URL="https://download.zeroc.com/nexus/repository/nuget-nightly/"
-              NUGET_API_KEY="${{ secrets.NUGET_NIGHTLY_API_KEY }}"
+              NUGET_API_KEY="${NEXUS_NIGHTLY_NUGET_API_KEY}"
               ;;
             *)
               echo "Unsupported channel: $CHANNEL"
@@ -58,3 +58,5 @@ jobs:
           done
         env:
           CHANNEL: ${{ inputs.channel }}
+          NEXUS_NIGHTLY_NUGET_API_KEY: ${{ secrets.NEXUS_NIGHTLY_NUGET_API_KEY }}
+          RELEASE_NUGET_API_KEY: ${{ secrets.RELEASE_NUGET_API_KEY }}
