--- a/.github/workflows/publish-misc-packages.yml
+++ b/.github/workflows/publish-misc-packages.yml
@@ -85,7 +85,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           CHANNEL: ${{ inputs.channel }}
 
-  build-swift-packages:
+  publish-swift-packages:
     runs-on: macos-15
     # Stable Swift release must be published manually.
     if: ${{ inputs.channel == 'nightly' }}
@@ -110,7 +110,7 @@ jobs:
           ICE_NIGHTLY_PUBLISH_TOKEN: ${{ secrets.ICE_NIGHTLY_PUBLISH_TOKEN }}
         if: ${{ inputs.channel == 'nightly' }}
 
-  build-brew-packages:
+  publish-brew-packages:
     runs-on: macos-15
     # Stable brew release must be published manually.
     if: ${{ inputs.channel == 'nightly' }}
@@ -144,6 +144,7 @@ jobs:
           set -euo pipefail
           mkdir -p staging
           gh run download "$RUN_ID" --repo zeroc-ice/ice --pattern "homebrew-bottle" --dir staging
+
       - name: Publish Homebrew Bottle Packages
         run: |
           aws s3 sync "staging/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.bottle.tar.gz"
