--- a/.github/workflows/publish-npm-packages.yml
+++ b/.github/workflows/publish-npm-packages.yml
@@ -38,11 +38,11 @@ jobs:
           case "$CHANNEL" in
             "3.8")
               REGISTRY_URL="https://registry.npmjs.org/"
-              NPM_AUTH_TOKEN="${{ secrets.NPM_RELEASE_AUTH_TOKEN }}"
+              NPM_AUTH_TOKEN="${RELEASE_NPM_AUTH_TOKEN}"
               ;;
             "nightly")
               REGISTRY_URL="https://download.zeroc.com/nexus/repository/npm-nightly/"
-              NPM_AUTH_TOKEN="${{ secrets.NPM_NIGHTLY_AUTH_TOKEN }}"
+              NPM_AUTH_TOKEN="${NEXUS_NIGHTLY_NPM_AUTH_TOKEN}"
               ;;
             *)
               echo "Unsupported channel: $CHANNEL"
@@ -61,3 +61,5 @@ jobs:
           npm publish staging/js-npm-packages/*.tgz --registry "${REGISTRY_URL}"
         env:
           CHANNEL: ${{ inputs.channel }}
+          NEXUS_NIGHTLY_NPM_AUTH_TOKEN: ${{ secrets.NEXUS_NIGHTLY_NPM_AUTH_TOKEN }}
+          RELEASE_NPM_AUTH_TOKEN: ${{ secrets.RELEASE_NPM_AUTH_TOKEN }}
