--- a/.github/workflows/publish-pip-packages.yml
+++ b/.github/workflows/publish-pip-packages.yml
@@ -39,12 +39,12 @@ jobs:
             "3.8")
               REPOSITORY_URL="https://download.zeroc.com/nexus/repository/pypi-nightly/"
               TWINE_USERNAME="__token__"
-              TWINE_PASSWORD="${{ secrets.PYPI_RELEASE_AUTH_TOKEN }}"
+              TWINE_PASSWORD="${RELEASE_PYPI_AUTH_TOKEN}"
               ;;
             "nightly")
               REPOSITORY_URL="https://download.zeroc.com/nexus/repository/pypi-nightly/"
               TWINE_USERNAME="nightly"
-              TWINE_PASSWORD="${{ secrets.PYPI_NIGHTLY_PASSWORD }}"
+              TWINE_PASSWORD="${NEXUS_NIGHTLY_PASSWORD}"
               ;;
             *)
               echo "Unsupported channel: $CHANNEL"
@@ -63,3 +63,6 @@ jobs:
           twine upload --verbose --repository-url ${REPOSITORY_URL} dist/*
         env:
           CHANNEL: ${{ inputs.channel }}
+          NEXUS_NIGHTLY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
+          RELEASE_PYPI_AUTH_TOKEN: ${{ secrets.RELEASE_PYPI_AUTH_TOKEN }}
+
