Add STAGING_DIR env to publish-maven-packages workflow

--- a/.github/workflows/publish-maven-packages.yml
+++ b/.github/workflows/publish-maven-packages.yml
@@ -22,6 +22,8 @@ jobs:
   build:
     name: "Publish Maven Packages"
     runs-on: 'ubuntu-24.04'
+    env:
+      STAGING_DIR: ${{ github.workspace}}/staging
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -32,8 +34,8 @@ jobs:
           RUN_ID: ${{ inputs.run_id }}
         run: |
           set -euo pipefail
-          mkdir -p staging
-          gh run download "$RUN_ID" --repo zeroc-ice/ice --pattern "java-packages" --dir staging
+          mkdir -p "${STAGING_DIR}"
+          gh run download "$RUN_ID" --repo zeroc-ice/ice --pattern "java-packages" --dir "${STAGING_DIR}"
 
       - name: Publish Java Packages
         run: |
@@ -57,9 +59,11 @@ jobs:
           esac
 
           mkdir -p lib
-          cp -pf ../../staging/java-packages/java/lib/*.jar lib
-          cp -pf ../../staging/java-packages/java/lib/*.pom lib
-          cp -pf ../../staging/java-packages/java/tools/slice-tools/build/libs/*.jar tools/slice-tools/build/libs/
+          cp -pf "${STAGING_DIR}/java-packages/lib/*.jar" lib
+          cp -pf "${STAGING_DIR}/java-packages/lib/*.pom" lib
+          cp -pf "${STAGING_DIR}/java-packages/lib/*.asc" lib
+          cp -pf "${STAGING_DIR}/java-packages/tools/slice-tools/build/libs/*.jar" tools/slice-tools/build/libs/
+          cp -pf "${STAGING_DIR}/java-packages/tools/slice-tools/build/libs/*.asc" tools/slice-tools/build/libs/
 
           ice_version=$(basename "$(ls ib/ice-*-sources.jar)" | sed -E 's/^ice-(.+)-sources\.jar$/\1/')
           ./gradlew publish -PiceVersion="${ice_version}"
