--- a/.github/workflows/publish-maven-packages.yml
+++ b/.github/workflows/publish-maven-packages.yml
@@ -64,8 +64,8 @@ jobs:
           cp -pf "${STAGING_DIR}"/java-packages/lib/*.asc lib
 
           mkdir -p tools/slice-tools/build/libs/
-          cp -pf "${STAGING_DIR}"/java-packages/tools/slice-tools/build/libs/*.jar" tools/slice-tools/build/libs/
-          cp -pf "${STAGING_DIR}"/java-packages/tools/slice-tools/build/libs/*.asc" tools/slice-tools/build/libs/
+          cp -pf "${STAGING_DIR}"/java-packages/tools/slice-tools/build/libs/*.jar tools/slice-tools/build/libs/
+          cp -pf "${STAGING_DIR}"/java-packages/tools/slice-tools/build/libs/*.asc tools/slice-tools/build/libs/
 
           ice_version=$(basename "$(ls lib/ice-*-sources.jar)" | sed -E 's/^ice-(.+)-sources\.jar$/\1/')
           ./gradlew publish -PiceVersion="${ice_version}"
