--- a/.github/workflows/publish-maven-packages.yml
+++ b/.github/workflows/publish-maven-packages.yml
@@ -21,7 +21,7 @@ on:
 jobs:
   build:
     name: "Publish Maven Packages"
-    runs-on: 'ubuntu-24.04'
+    runs-on: "ubuntu-24.04"
     env:
       STAGING_DIR: ${{ github.workspace}}/staging
     steps:
@@ -73,4 +73,3 @@ jobs:
           NEXUS_NIGHTLY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
           MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           MAVEN_CENTRAL_API_KEY: ${{ secrets.MAVEN_CENTRAL_API_KEY }}
-
