--- a/.github/workflows/publish-npm-packages.yml
+++ b/.github/workflows/publish-npm-packages.yml
@@ -34,15 +34,14 @@ jobs:
       - name: Publish NPM Packages
         run: |
           set -euo pipefail
-
           case "$CHANNEL" in
             "3.8")
-              REPOSITORY_PREFIX="registry.npmjs.org"
-              echo "//${REPOSITORY_PREFIX}/:_authToken=\${RELEASE_NPM_AUTH_TOKEN}" > ~/.npmrc
+              REPOSITORY_PREFIX="//registry.npmjs.org/"
+              echo "${REPOSITORY_PREFIX}:_authToken=\${RELEASE_NPM_AUTH_TOKEN}" > ~/.npmrc
               ;;
             "nightly")
-              REPOSITORY_PREFIX="download.zeroc.com/nexus/repository/npm-nightly"
-              echo "//${REPOSITORY_PREFIX}/:_auth=\${NEXUS_NIGHTLY_NPM_AUTH_TOKEN}" > ~/.npmrc
+              REPOSITORY_PREFIX="//download.zeroc.com/nexus/repository/npm-nightly/"
+              echo "${REPOSITORY_PREFIX}:_auth=\${NEXUS_NIGHTLY_NPM_AUTH_TOKEN}" > ~/.npmrc
               ;;
             *)
               echo "Unsupported channel: $CHANNEL"
@@ -51,7 +50,7 @@ jobs:
           esac
 
           echo "always-auth=true" >> ~/.npmrc
-          npm publish staging/js-npm-packages/*.tgz --registry "https://${REPOSITORY_PREFIX}"
+          npm publish staging/js-npm-packages/*.tgz --registry "https:${REPOSITORY_PREFIX}"
         env:
           CHANNEL: ${{ inputs.channel }}
           NEXUS_NIGHTLY_NPM_AUTH_TOKEN: ${{ secrets.NEXUS_NIGHTLY_NPM_AUTH_TOKEN }}
