--- a/.github/workflows/publish-deb-packages.yml
+++ b/.github/workflows/publish-deb-packages.yml
@@ -50,8 +50,8 @@ jobs:
           set -euo pipefail
 
           echo "Syncing current repository from S3..."
-          mkdir -p "${DISTRIBUTION}"
-          aws s3 sync "s3://zeroc-downloads/ice/${CHANNEL}/${DISTRIBUTION}" "${DISTRIBUTION}"
+          mkdir -p "${CHANNEL}/${DISTRIBUTION}"
+          aws s3 sync "s3://zeroc-downloads/ice/${CHANNEL}/${DISTRIBUTION}" "${CHANNEL}/${DISTRIBUTION}"
 
           echo "Creating/updating repository with new DEB packages..."
           docker_args=(
@@ -63,12 +63,12 @@ jobs:
           )
           docker run "${docker_args[@]}" /workspace/ice/packaging/deb/create-deb-repo.sh \
             --staging /workspace/staging/
-            --repository "${DISTRIBUTION}"
+            --repository "/workspace/${CHANNEL}"
             --distribution "${DISTRIBUTION}" \
             --channel "${CHANNEL}"
 
           echo "Uploading updated repository to S3..."
-          aws s3 sync "${DISTRIBUTION}" "s3://zeroc-downloads/ice/${CHANNEL}/${DISTRIBUTION}" --delete
+          aws s3 sync "${CHANNEL}" "s3://zeroc-downloads/ice/${CHANNEL}/${DISTRIBUTION}" --delete
         env:
           CHANNEL: ${{ inputs.channel }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
