--- a/java/build.gradle
+++ b/java/build.gradle
@@ -92,8 +92,7 @@ task alljavadoc(type: Javadoc) {
         '**/android/bluetooth/*.java',
         '**/com/zeroc/Ice/CommunicatorObserverI.java',
         '**/com/zeroc/Ice/InvocationObserverI.java',
-        '**/com/zeroc/Ice/ConnectionI.java',
-        '**/IceGrid/*.java'
+        '**/com/zeroc/Ice/ConnectionI.java'
     )
 }
 alljavadoc.dependsOn = exportedProjects.collect { project(it).assemble.dependsOn }
