--- a/java/build.gradle
+++ b/java/build.gradle
@@ -87,6 +87,7 @@ task alljavadoc(type: Javadoc) {
     options.addBooleanOption('html5', true)
     options.header = 'Ice for Java'
     options.docTitle = "Ice ${iceVersion} API Reference"
+    failOnError = true
 
     exclude(
         '**/android/bluetooth/*.java',
