--- a/.github/workflows/publish-misc-packages.yml
+++ b/.github/workflows/publish-misc-packages.yml
@@ -1,5 +1,5 @@
 name: "Publish MISC Packages"
-# This workflow publishes various packages (MSI, MATLAB, XCFramework, Swift) to S3.
+# This workflow publishes various packages (MSI, MATLAB, XCFramework, Swift, Brew) to S3.
 # We don't use separate workflows to avoid the reusable workflow limit in GitHub Actions.
 on:
   workflow_dispatch:
@@ -35,7 +35,9 @@ jobs:
       - name: Publish MSI Packages
         run: |
           set -euo pipefail
-          aws s3 sync "staging/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.msi"
+          mkdir -p ${CHANNEL}
+          cp -pvf staging/windows-msi/*.msi "${CHANNEL}/"
+          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.msi"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -56,7 +58,9 @@ jobs:
       - name: Publish MATLAB Packages
         run: |
           set -euo pipefail
-          aws s3 sync "staging/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.mltbx"
+          mkdir -p ${CHANNEL}
+          cp -pvf staging/matlab-packages-*/*.mltbx "${CHANNEL}/"
+          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.mltbx"
 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -79,7 +83,9 @@ jobs:
       - name: Publish XCFramework Packages
         run: |
           set -euo pipefail
-          aws s3 sync "staging/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.xcframework.zip"
+          mkdir -p ${CHANNEL}
+          cp -pvf staging/xcframework-packages/*.zip "${CHANNEL}/"
+          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.zip"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
