--- a/.github/workflows/publish-misc-packages.yml
+++ b/.github/workflows/publish-misc-packages.yml
@@ -37,7 +37,7 @@ jobs:
           set -euo pipefail
           mkdir -p ${CHANNEL}
           cp -pvf staging/windows-msi/*.msi "${CHANNEL}/"
-          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.msi"
+          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/ice/${CHANNEL}/" --exclude "*" --include "*.msi"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -60,7 +60,7 @@ jobs:
           set -euo pipefail
           mkdir -p ${CHANNEL}
           cp -pvf staging/matlab-packages-*/*.mltbx "${CHANNEL}/"
-          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.mltbx"
+          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/ice/${CHANNEL}/" --exclude "*" --include "*.mltbx"
 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -85,7 +85,7 @@ jobs:
           set -euo pipefail
           mkdir -p ${CHANNEL}
           cp -pvf staging/xcframework-packages/*.zip "${CHANNEL}/"
-          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.zip"
+          aws s3 sync "${CHANNEL}/" "s3://zeroc-downloads/ice/${CHANNEL}/" --exclude "*" --include "*.zip"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -154,7 +154,7 @@ jobs:
 
       - name: Publish Homebrew Bottle Packages
         run: |
-          aws s3 sync "staging/" "s3://zeroc-downloads/${CHANNEL}/" --exclude "*" --include "*.bottle.tar.gz"
+          aws s3 sync "staging/" "s3://zeroc-downloads/ice/${CHANNEL}/" --exclude "*" --include "*.bottle.tar.gz"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
