--- a/.github/workflows/build-macos-packages.yml
+++ b/.github/workflows/build-macos-packages.yml
@@ -22,9 +22,44 @@ permissions:
   contents: write
 
 jobs:
-  build-brew-packages:
+  build-xcfranework-packages:
     runs-on: macos-15
 
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup C++
+        uses: ./.github/actions/setup-cpp
+
+      - name: Setup Cache
+        uses: ./.github/actions/setup-cache
+        with:
+          prefix: build-xcframework-packages
+
+      - name: Build XCFramework Packages
+        run: make OPTIMIZE=yes PLATFORMS="all" CONFIGS="static" srcs
+        working-directory: cpp
+
+      - name: Create XCFrameworks Zip archives
+        run: |
+          for dir in *.xcframework; do
+            framework_name=$(basename $dir)
+            framework_zip=${framework_name/.xcframework/-${{inputs.ice_version}}.xcframework.zip}
+            zip -r $framework_zip $dir
+          done
+        working-directory: cpp/lib/XCFrameworks
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: xcframework-packages
+          path: cpp/lib/XCFrameworks/*.zip
+
+  build-brew-packages:
+    runs-on: macos-15
+    # Stable brew release must be build manually.
+    if: ${{ inputs.channel == 'nightly' }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
