--- a/.github/workflows/publish-pip-packages.yml
+++ b/.github/workflows/publish-pip-packages.yml
@@ -17,10 +17,12 @@ on:
       run_id:
         required: true
         type: string
+
 jobs:
   build:
     name: "Publish Python PIP Packages"
-    runs-on: "ubuntu-24.04"
+    runs-on: ubuntu-24.04
+
     steps:
       - name: Download PIP artifacts
         env:
@@ -37,7 +39,7 @@ jobs:
 
           case "$CHANNEL" in
             "3.8")
-              REPOSITORY_URL="https://download.zeroc.com/nexus/repository/pypi-nightly/"
+              REPOSITORY_URL="https://upload.pypi.org/legacy/"
               export TWINE_USERNAME="__token__"
               export TWINE_PASSWORD="${RELEASE_PYPI_AUTH_TOKEN}"
               ;;
@@ -53,14 +55,14 @@ jobs:
           esac
 
           mkdir -p dist
-          find staging -name 'zeroc_ice-*' -type f | while read -r file; do
-            cp -vf $file dist
-          done
+          # Collect all matching package files into dist/
+          find staging -name 'zeroc_ice-*' -type f -exec cp -vf {} dist/ \;
 
+          # Upload using Twine in a fresh venv
           python3 -m venv venv
           source venv/bin/activate
-          pip install twine
-          twine upload --verbose --repository-url ${REPOSITORY_URL} dist/*
+          pip install --upgrade pip twine
+          twine upload --verbose --repository-url "${REPOSITORY_URL}" dist/*
         env:
           CHANNEL: ${{ inputs.channel }}
           NEXUS_NIGHTLY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
